--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<div class="otp-container">
+        <h2 id="verification_heading">OTP Verification</h2>
+        <p id="verification_subtext">Enter the 6-digit code sent to your phone</p>
+        <div class="code-container">
+            <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
+            <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
+            <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
+            <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
+            <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
+            <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
+        </div>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
