--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
 
 	<div class="otp-container">
-        <h2 id="verification_heading">OTP Verification</h2>
-        <p id="verification_subtext">Enter the 6-digit code sent to your phone</p>
+        <h2 id="verification_heading">Verify Your Account</h2>
+        <p id="verification_subtext">We emailed you the six digit code to acciojob@email.com Enter the code below to confirm your email address.</p>
         <div class="code-container">
             <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
             <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
