--- a/main.html
+++ b/main.html
@@ -13,12 +13,12 @@
         <h2 id="verification_heading">Verify Your Account</h2>
         <p id="verification_subtext">We emailed you the six digit code to acciojob@email.com Enter the code below to confirm your email address.</p>
         <div class="code-container">
-            <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
-            <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
-            <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
-            <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
-            <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
-            <input type="text" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
+            <input type="text" id="code-1" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
+            <input type="text" id="code-2" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
+            <input type="text" id="code-3" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
+            <input type="text" id="code-4" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
+            <input type="text" id="code-5" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
+            <input type="text" id="code-6" class="code" maxlength="1" oninput="handleInput(event)" onkeydown="handleBackspace(event)">
         </div>
     </div>
     <script type="text/javascript" src="./script.js">
